--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,8 +1,4 @@
 /*** GENERAL styles START ***/
-.header-section {
-	background-image: url("../images/banner-bg-tablet.jpg");
-}
-
 .content {
 	padding-left: 35px;
 	padding-right: 35px;
@@ -31,6 +27,10 @@
 /*** GENERAL styles END ***/
 
 /*** HEADER section START ***/
+.header-section {
+	background-image: url("../images/banner-bg-tablet.jpg");
+}
+
 .header-section__content {
 	padding-bottom: 125px;
 }
@@ -50,13 +50,15 @@
 	background-image: url("../images/menu-button.png");
 }
 
-.header-section__menu-list-container_hidden {
+.header-section__menu-list-container_hidden, .header-section__menu-item-link_hidden {
 	position: absolute;
 
 	width: 1px;
 	height: 1px;
 	
 	clip: rect(1px, 1px, 1px, 1px);
+
+	font-size: 0; /* это для ссылкок (они вываливаются) */
 }
 
 .header-section__title-wrapper {
